--- a/boards/templates/boards/index.html
+++ b/boards/templates/boards/index.html
@@ -1,11 +1,13 @@
 {% extends 'boards/base.html' %}
 {% block body %}
 <h1>게시글 목록</h1>
-<a href='{% url "boards:create" %}'>글 쓰러가기</a>
+{% if user.is_authenticated %}
+    <a href="{% url 'boards:create' %}">글 쓰러가기</a>
+{% endif %}
 {% for board in boards %}
     <p>{{ board.pk }}</p>
     <p>{{ board.title }}</p>
-    <a href='{% url "boards:detail" board.pk %}'>글 보러가기</a>
+    <a href="{% url 'boards:detail' board.pk %}">글 보러가기</a>
     <hr>
 {% endfor %}
 {% endblock %}
