--- a/boards/templates/boards/base.html
+++ b/boards/templates/boards/base.html
@@ -12,6 +12,11 @@
     {% if user.is_authenticated %}
         <h1>{{ user }}님 환영합니다 :)</h1>
         <a href="{% url 'accounts:logout' %}">로그아웃</a>
+        <a href="{% url 'accounts:update' %}">프로필수정</a>
+        <form action="{% url 'accounts:delete' %}" method='POST' onsubmit='return confirm(탈퇴할거야?)"'>
+            {% csrf_token %}
+            <input type='submit' value='회원탈퇴'>
+        </form>
     {% else %}
         <a href="{% url 'accounts:signup' %}">회원가입</a>
         <a href="{% url 'accounts:login' %}">로그인</a>
