--- a/boards/templates/boards/detail.html
+++ b/boards/templates/boards/detail.html
@@ -3,6 +3,7 @@
 {% block body %}
 <h1>{{ board.pk }}번째 글</h1>
 <h2>{{ board.title }}</h2>
+<h3>작성자 : {{ board.user }}</h3>
 <p>조회수 : {{ board.hit }}</p>
 <hr>
 <p>{{ board.content }}</p>
